--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@ title: about
 <h2>Who am I?</h2>
 
 <article itemscope itemtype="http://schema.org/Person">
-  <img itemprop="image" style="float: right" src="{{ version . "static/avatar_fb.jpg" }}">
+  <img itemprop="image" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
 
   <p class="info">This page is marked as HTML5 microdata</p>
 
