more about page

--- a/src/about.html
+++ b/src/about.html
@@ -25,9 +25,12 @@ title: about
     </span>, working as a <span itemprop="jobTitle">CTO</span>
     for <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization">
       <a itemprop="url" href="https://modnakasta.ua/"><span itemprop="brand">modnaKasta</span></a>
-    </span> - we're building sick ecommerce platform there! Before that I've
-    been writing SPA applications in React, Backbone.js, and back-ends in Python
-    (with Django and other stuff).
+    </span> - we're building sick ecommerce platform there! It's all about
+    Clojure & ClojureScript nowadays - that's the best platform choice, ain't it? :)
+  </p>
+  <p>
+    Before that I've been writing SPA applications in React,
+    Backbone.js, and back-ends in Python (with Django and other stuff).
   </p>
 
   <p>
