--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 title: Alexander Solovyov
-description: Personal homepage of Alexander Solovyov
+description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
 <!-- http://www.flaticon.com/ -->
