move showkr to subdir

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 
     <div class="unit">
       <h4 data-repo="showkr">
-        <a href="http://showkr.solovyov.net/">Showkr</a>
+        <a href="https://solovyov.net/showkr/">Showkr</a>
       </h4>
       <p>Minimalistic viewer for Flickr</p>
     </div>
