--- a/src/photo.html
+++ b/src/photo.html
@@ -10,9 +10,9 @@ title: My photos
 
 <div id="main" class="showkr"></div>
 
-<script src="http://showkr.solovyov.net/main.js"></script>
+<script src="/showkr/main.js"></script>
 <script type="text/javascript">
     showkr.main("main", {"path": "user/asolovyov", "hide-title": true});
 </script>
 
-<div class="note">Powered by <a href="http://showkr.solovyov.net/">Showkr</a></div>
+<div class="note">Powered by <a href="/showkr/">Showkr</a></div>
