initial commit for slides

--- a/src/index.html
+++ b/src/index.html
@@ -101,13 +101,13 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
   {{/* Slides */}}
   <div class="flex-left top-gap">
     <div class="index-icon">
-      <a href="http://piranha.github.io/slides/">
+      <a href="slides/">
         <svg class="icon"><use xlink:href="#slideshow"></svg>
       </a>
     </div>
 
     <div class="unit-3-4">
-      <a href="http://piranha.github.io/slides/">Slides from my talks</a>
+      <a href="slides/">Slides from my talks</a>
       <p class="top-gap-0">
         So that they can be referenced.
       </p>
