--- a/src/about.html
+++ b/src/about.html
@@ -13,24 +13,25 @@ title: about
     that's <a itemprop="url" href="{{ .Site.Other.Url }}">my site</a>.
   </p>
 
-  <p>
-    I usually use nickname &ldquo;<span itemprop="nickname">piranha</span>&rdquo; everywhere
-    (though lately I tend to use &ldquo;<span itemprop="nickname">asolovyov</span>&rdquo;).
+  <p>You can find me on the Internets as either
+    &ldquo;<span itemprop="nickname">piranha</span>&rdquo; or
+    &ldquo;<span itemprop="nickname">asolovyov</span>&rdquo;.
   </p>
 
   <p>
     <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
       I live in <span itemprop="addressLocality">Kyiv</span>,
       <span itemprop="addressCountry">Ukraine</span>
-    </span>, working as a <span itemprop="jobTitle">CTO</span>
+    </span>, working as a <span itemprop="jobTitle">Chief Product Officer</span>
     for <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization">
-      <a itemprop="url" href="https://modnakasta.ua/"><span itemprop="brand">modnaKasta</span></a>
-    </span> - we're building sick ecommerce platform there! It's all about
-    Clojure & ClojureScript nowadays - that's the best platform choice, ain't it? :)
+      <a itemprop="url" href="https://modnakasta.ua/"><span itemprop="brand">Kasta</span></a>
+    </span> - we're building slick ecommerce platform there!
   </p>
   <p>
-    Before that I've been writing SPA applications in React,
-    Backbone.js, and back-ends in Python (with Django and other stuff).
+    Before that I was a CTO at Kasta, where I built a team of great engineer and
+    we together have brought the company to using Clojure & ClojureScript.
+    Before that I've been writing SPA applications in React, Backbone.js, and
+    back-ends in Python (with Django and other stuff).
   </p>
 
   <p>
