upd index page to include my name lol

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@ title: Alexander Solovyov
 description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
+<article itemscope itemtype="http://schema.org/Person">
+  <img itemprop="image" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
+  <p class="lead">I'm <span itemprop="name">Alexander Solovyov</span>, software engineer and blogger <i>(I guess)</i>.</p>
+  <p>I'm a <span itemprop="jobTitle">Chief Product Officer</span> at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>, and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
+  <p>If you want to contact me, use my email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
+</article>
+
 <h2 id="presence">Online presence</h1>
 
 {{/* Blog */}}
@@ -119,15 +126,6 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
   <div class="unit-1-4 flex-right">
     <a id="flickr-photo" href="photo/"></a>
   </div>
-</div>
-
-
-<div id="contacts">
-<h2>Contact me</h2>
-
-<p class="span8">
-  The simplest way to contact me is email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-</p>
 </div>
 
 
