--- a/src/showkr/index.html
+++ b/src/showkr/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.ico">
+  <meta name="robots" content="noindex">
   <title>Showkr</title>
 </head>
 <body>
